tests/failing/invalid_type.dodo
fn main() {
    let x: fn = 12;
}
